fix: solución de issues por uso de collectors y transient